@startuml erd

entity user {
    * id : INT
    --
    * name : VARCHAR
    * email : VARCHAR
    * created_at : DATETIME
    updated_at : DATETIME
}

entity settings {
    * id : INT
    --
    * user_id : INT
    pin : VARCHAR
    pin_desktop_only : BOOLEAN
    hide_amount : BOOLEAN
    max_visible_amount : FLOAT
    month_end_date : INT    
}

entity account {
    * id : INT
    --
    * name : VARCHAR
    * initial_balance : FLOAT
    * balance : FLOAT
    * logo : VARCHAR
    * user_id : INT
    * created_at : DATETIME
    updated_at : DATETIME
}

entity category {
    * id : INT
    --
    * name : VARCHAR
    * logo : VARCHAR
    * type : enum('expense', 'income')
    * user_id : INT
    * created_at : DATETIME
    updated_at : DATETIME
}


entity transaction {
    * id : INT
    --
    * amount : FLOAT
    * type : enum('expense', 'income', 'transfer')
    * account_id : INT
    * description : VARCHAR
    * occurred_at : DATETIME
    * user_id : INT
    * created_at : DATETIME
    to_account_id : INT
    category_id : INT
    updated_at : DATETIME
}

account "n" -- "1" user
category "n" -- "1" user
transaction "n" -- "1" account
transaction "n" -- "1" category
settings "1" -- "1" user

@enduml